[package]
name = "maisum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sled = "0.34.7"
clap = "4.1.1"
structopt = "0.3.26"
[dependencies.cursive]
version = "0.20.0"
default-features = false
features = ["pancurses-backend"]
